# BaVI-pose-tracking

./: CMakeLists.txt  LICENSE  README.md
Particle_Filter/: BatchEstimator.h  CMakeLists.txt  ClusterParticleFilter.h  MultiVariateGaussianNoiseVector.h  TransformIt.h  checkOutlier.cpp  gripDetector.h  realDataSmoothing.cpp
utils/: CMakeLists.txt  CSV_Reader.cpp  CSV_Reader.hpp  Callbacker.hpp  ManifoldTypes.hpp  ZaVI_Utils.cpp  ZaVI_Utils.hpp  ZaviConfig.cpp  ZaviConfig.hpp  datasetFormat.cpp  datasetFormat.hpp  threaded_object.hpp  threaded_objects.cpp
utils/Plugins/: ARTPlugin.cpp  ARTPlugin.hpp  FileIMUPlugin.cpp  FileIMUPlugin.hpp  PoseReader.hpp  ResultLoader.cpp  ResultLoader.hpp  SynchronizedSensorsPlugin.hpp  imu_plugin.hpp  sensor_plugin.hpp  state_plugin_base.hpp  state_plugin_posereader.hpp  state_sensor_plugin_posereader.hpp
utils/oriestimu_src/: CSGutilities.cpp  CSGutilities.hpp  CsgOriEstIMU.cpp  CsgOriEstIMU.hpp
utils/probabilistics/: mahalonobis_probability.hpp
